Met à jour departement_mayenne-aide-au-bafa-du-departement-de-la-mayenne

--- a/data/benefits/javascript/departement_mayenne-aide-au-bafa-du-departement-de-la-mayenne.yml
+++ b/data/benefits/javascript/departement_mayenne-aide-au-bafa-du-departement-de-la-mayenne.yml
@@ -19,10 +19,10 @@ conditions_generales:
     value: 26
 profils: []
 conditions:
-  - "👉 Être dans l'un des cas suivants : lycéen ou étudiant boursier, demandeur
+  - "Être dans l'un des cas suivants : lycéen ou étudiant boursier, demandeur
     d’emploi non indemnisé, bénéficiaire de minima sociaux, non imposable ou
     rattaché à un foyer fiscal non imposable."
-  - 👉 Ne pas avoir reçu d’aide provenant d’une autre collectivité territoriale.
+  - Ne pas avoir reçu d’aide provenant d’une autre collectivité territoriale.
 interestFlag: _interetBafa
 type: float
 unit: €
