Met à jour departement_mayenne-aide-au-bafa-du-departement-de-la-mayenne

--- a/data/benefits/javascript/departement_mayenne-aide-au-bafa-du-departement-de-la-mayenne.yml
+++ b/data/benefits/javascript/departement_mayenne-aide-au-bafa-du-departement-de-la-mayenne.yml
@@ -30,4 +30,4 @@ periodicite: autre
 montant: 300
 link: https://www.lamayenne.fr/service/aide-pour-passer-le-bafa#:~:text=Afin%20d'encourager%20les%20jeunes,r%C3%A9alisation%20du%20stage%20de%20base.
 teleservice: https://www.demarches-simplifiees.fr/commencer/cd53-bafa
-instructions: https://static.demarches-simplifiees.fr/v1/AUTH_db3cbfc79c914f87b192ff7c6bb176f0/ds_activestorage_backup/Fvyixi1Q2iv1KsqaEjnvgXsG?temp_url_sig=8874d13a97e06d6e002077a333561a53279c541d&temp_url_expires=1677156028&filename=BAFA.pdf&inline
+instructions: ""
