Met à jour departement_mayenne-aide-au-bafa-du-departement-de-la-mayenne

--- a/data/benefits/javascript/departement_mayenne-aide-au-bafa-du-departement-de-la-mayenne.yml
+++ b/data/benefits/javascript/departement_mayenne-aide-au-bafa-du-departement-de-la-mayenne.yml
@@ -5,7 +5,7 @@ description: >-
   personne âgée de 16 à 26 ans s’engageant à suivre l’intégralité de la
   formation BAFA. 
 
-  La demande d'aide doit être effectuée à la fin de la session de formation générale.
+  La demande d'aide doit être effectuée à la fin de la session de formation générale et au plus tard dans le mois suivant le dernier stage de formation.
 prefix: l’
 conditions_generales:
   - type: departements
@@ -17,18 +17,11 @@ conditions_generales:
   - type: age
     operator: <=
     value: 26
-profils:
-  - type: lyceen
-    conditions:
-      - type: boursier
-  - type: enseignement_superieur
-    conditions:
-      - type: boursier
-  - type: chomeur
-    conditions: []
-  - type: beneficiaire_rsa
-    conditions: []
+profils: []
 conditions:
+  - "Être dans l'un des cas suivants : lycéen ou étudiant boursier, demandeur
+    d’emploi non indemnisé, bénéficiaire de minima sociaux, non imposable ou
+    rattaché à un foyer fiscal non imposable."
   - Ne pas avoir reçu d’aide provenant d’une autre collectivité territoriale.
 interestFlag: _interetBafa
 type: float
