Met à jour departement_mayenne-aide-au-bafa-du-departement-de-la-mayenne

--- a/data/benefits/javascript/departement_mayenne-aide-au-bafa-du-departement-de-la-mayenne.yml
+++ b/data/benefits/javascript/departement_mayenne-aide-au-bafa-du-departement-de-la-mayenne.yml
@@ -28,6 +28,6 @@ type: float
 unit: €
 periodicite: autre
 montant: 300
-link: https://www.lamayenne.fr/service/aide-pour-passer-le-bafa#:~:text=Afin%20d'encourager%20les%20jeunes,r%C3%A9alisation%20du%20stage%20de%20base.
+link: https://www.lamayenne.fr/service/aide-pour-passer-le-bafa
 teleservice: https://www.demarches-simplifiees.fr/commencer/cd53-bafa
 instructions: ""
