--- a/data/benefits/javascript/aide-demonstration-preremplissage.yml
+++ b/data/benefits/javascript/aide-demonstration-preremplissage.yml
@@ -10,7 +10,7 @@ link: https://www.demarches-simplifiees.fr/commencer/aide-beaumont-en-verdunois
 teleservice:
   name: redirection
   query:
-    vers: ds_aide-beaumont-en-verdunois
+    vers: ds?benefit=aide-beaumont-en-verdunois
 prefix: l’
 periodicite: ponctuelle
 type: bool
