--- a/data/benefits/javascript/caf-drome-aide-bafa-session-generale.yml
+++ b/data/benefits/javascript/caf-drome-aide-bafa-session-generale.yml
@@ -8,7 +8,6 @@ conditions:
     allocataire drômois).
   - Ne pas avoir déjà obtenu la totalité du financement du Bafa par d'autres
     organismes.
-prefix: l’
 conditions_generales:
   - type: age
     operator: ">="
@@ -19,11 +18,12 @@ conditions_generales:
   - type: quotient_familial
     period: month
     value: 785
-    operator: <=
+    operator: "<="
 profils: []
 link: https://www.caf.fr/allocataires/caf-de-la-drome/offre-de-service/vie-professionnelle/entree-dans-le-vie-active/aide-financiere-pour-passer-le-bafa
 form: https://www.caf.fr/sites/default/files/medias/261/allocataire/vie-professionnelle/formulaire-%20bafa-formation-generale.pdf
 instructions: https://www.caf.fr/allocataires/caf-de-la-drome/offre-de-service/vie-professionnelle/entree-dans-le-vie-active/aide-financiere-pour-passer-le-bafa
+prefix: l’
 type: float
 unit: €
 periodicite: ponctuelle
