Fix lisibilité pour la PR

--- a/data/benefits/javascript/aide-au-bafa-pour-une-session-dapprofondissement-ou-de-qualification-caf-de-la-haute-savoie.yml
+++ b/data/benefits/javascript/aide-au-bafa-pour-une-session-dapprofondissement-ou-de-qualification-caf-de-la-haute-savoie.yml
@@ -6,8 +6,7 @@ description: L'aide au BAFA pour une session de formation générale est une aid
   CAF.<br><br>Pour bénéficier de cette aide, contactez directement la CAF de la
   Haute-Savoie pour connaître les démarches à suivre.
 conditions:
-  - Avoir commencé une formation pour obtenir le brevet d’aptitude à la fonction
-    d’animateur de centre de vacances et de loisirs (BAFA).
+  - Avoir commencé une formation pour obtenir le brevet d’aptitude à la fonction d’animateur de centre de vacances et de loisirs (BAFA).
 link: https://www.caf.fr/allocataires/caf-de-la-haute-savoie/offre-de-service/vie-professionnelle/solidarite-et-insertion
 instructions: https://wwwd.caf.fr/wps/portal/caffr/macaf/contactermacaf#/contactcaf
 prefix: l’
