Permet l'ajout de la condition Boursier dans l'onglet Scolarité (outil contrib)

--- a/contribuer/public/admin/config.yml
+++ b/contribuer/public/admin/config.yml
@@ -560,6 +560,7 @@ fields:
             types:
               - *field_age
               - *field_formation_sanitaire_social
+              - *field_boursier
               - label: Année d'étude
                 name: annee_etude
                 widget: object
