--- a/data/benefits/javascript/auvergne-rhone-alpes-bourse-merite.yml
+++ b/data/benefits/javascript/auvergne-rhone-alpes-bourse-merite.yml
@@ -2,14 +2,9 @@ label: bourse au mérite
 institution: region_auvergne_rhone_alpes
 description: La bourse au mérite permet de récompenser les lycéen·ne·s et les
   élèves en formation professionnelle méritants par un versement en une fois de
-  500 euros. La région souhaite les aider à poursuivre leurs études dans de
-  bonnes conditions et veut encourager l’émulation pour développer des parcours
-  de réussite dans notre système éducatif.
-conditions:
-  - Être titulaire d’une mention « Très Bien » à la dernière session du
-    baccalauréat ou avoir au moins 16 sur 20 au Certificat d’Aptitude
-    Professionnelle (CAP) ou au Brevet professionnel (BP).
-  - Poursuivre un parcours d’études ou professionnel.
+  500 euros. La demande doit être effectuée entre le jour des résultats du
+  Bac/CAP/BP et le 31 octobre.
+prefix: la
 conditions_generales:
   - type: regions
     values:
@@ -22,11 +17,15 @@ profils:
           - mention_tres_bien
           - mention_tres_bien_felicitations_jury
   - type: apprenti
-link: https://rhone-alpes.commeunservice.com/bourses/jsp/nouveauContexte.action?codeAction=M42-ACCUEIL#BAM
-teleservice: https://rhone-alpes.commeunservice.com/bourses/jsp/nouveauContexte.action?codeAction=M42-ACCUEIL#BAM
-prefix: la
+conditions:
+  - Être titulaire d’une mention « Très Bien » à la dernière session du
+    baccalauréat ou avoir au moins 16 sur 20 au Certificat d’Aptitude
+    Professionnelle (CAP) ou au Brevet professionnel (BP).
+  - Poursuivre un parcours d’études ou professionnel.
 type: float
 unit: €
 periodicite: ponctuelle
-floorAt: 10
 montant: 500
+link: https://rhone-alpes.commeunservice.com/bourses/jsp/nouveauContexte.action?codeAction=M42-ACCUEIL#BAM
+teleservice: https://rhone-alpes.commeunservice.com/bourses/jsp/nouveauContexte.action?codeAction=M42-ACCUEIL#BAM
+floorAt: 10
