Met à jour region-auvergne-rhone-alpes-aide-financement-permis

--- a/data/benefits/javascript/region-auvergne-rhone-alpes-aide-financement-permis.yml
+++ b/data/benefits/javascript/region-auvergne-rhone-alpes-aide-financement-permis.yml
@@ -1,6 +1,8 @@
 label: aide au financement du permis
 institution: region_auvergne_rhone_alpes
-description: Grâce à cette aide, bénéficiez du financement d'une partie de votre permis B.
+description: Grâce à cette aide, bénéficiez du financement d'une partie de votre
+  permis B. Cette aide est cumulable avec l'aide au permis du Pass'région
+  Auvergne-Rhône-Alpes.
 prefix: l’
 conditions_generales:
   - type: age
