--- a/data/benefits/javascript/region-auvergne-rhone-alpes-ter-illico-solidaire.yml
+++ b/data/benefits/javascript/region-auvergne-rhone-alpes-ter-illico-solidaire.yml
@@ -4,12 +4,9 @@ description: Grâce à la carte gratuite TER Illico Solidaire, bénéficiez pend
   1 an de 75% de réduction sur les billets TER tarif normal en
   Auvergne-Rhône-Alpes.
 conditions:
-  - "Être dans l'une des situations suivantes : demandeur·euse d’emploi
-    indemnisé·e en dessous du SMIC ou non indemnisé·e ; avoir moins de 26 ans et
-    être inscrit·e en mission locale et participer à un dispositif régional ou
-    national de formation ou d’accompagnement renforcé ; être titulaire d’un
-    contrat aidé ; être bénéficiaire du RSA ou de l’ASPA ; être demandeur·euse
-    d'asile."
+  - "Être dans l'une des situations suivantes : demandeur·euse d’emploi indemnisé·e en dessous du SMIC ou non
+    indemnisé·e ; avoir moins de 26 ans et être inscrit·e en mission locale et participer à un dispositif régional ou national de formation ou
+    d’accompagnement renforcé ; être titulaire d’un contrat aidé ; être bénéficiaire du RSA ou de l’ASPA ; être demandeur·euse d'asile."
 conditions_generales:
   - type: regions
     values:
