--- a/data/benefits/javascript/region-corse-bourse-a-la-mobilite-mobighjovani.yml
+++ b/data/benefits/javascript/region-corse-bourse-a-la-mobilite-mobighjovani.yml
@@ -3,13 +3,7 @@ institution: region_corse
 description: Grâce à la bourse Mobighjovani, profitez d'une aide financière qui
   vise à couvrir les frais non pris en charge dans les différents programmes de
   mobilité internationale.
-conditions:
-  - Résider en Corse depuis 2 ans.
-  - Déposer une demande écrite motivée.
-  - Être rattaché·e à un foyer dont le revenu fiscal est inférieur à 18 500€
-    par part fiscale.
-  - Ne pas avoir débuté son projet de mobilité au moment du dépôt de la
-    candidature.
+prefix: la
 conditions_generales:
   - type: age
     operator: ">="
@@ -21,11 +15,17 @@ conditions_generales:
     values:
       - "94"
 profils: []
-link: https://www.isula.corsica/jeunesse/Bourse-a-la-mobilite-Mobighjovani_a276.html
-instructions: https://www.isula.corsica/jeunesse/Bourse-a-la-mobilite-Mobighjovani_a276.html
-prefix: la
+conditions:
+  - Résider en Corse depuis 2 ans.
+  - Déposer une demande écrite motivée.
+  - Être rattaché·e à un foyer dont le revenu fiscal est inférieur à 18 500€ par
+    part fiscale.
+  - Ne pas avoir débuté son projet de mobilité au moment du dépôt de la
+    candidature.
+interestFlag: _interetEtudesEtranger
 type: float
 unit: €
 periodicite: autre
 montant: 300
-interestFlag: _interetEtudesEtranger
+link: https://www.isula.corsica/jeunesse/Bourse-Mobighjovani-300-pour-les-jeunes-qui-souhaitent-voyager_a276.html
+instructions: https://www.isula.corsica/jeunesse/Bourse-Mobighjovani-300-pour-les-jeunes-qui-souhaitent-voyager_a276.html
