Met à jour departement_mayenne-aide-au-bafd

--- a/data/benefits/javascript/departement_mayenne-aide-au-bafd.yml
+++ b/data/benefits/javascript/departement_mayenne-aide-au-bafd.yml
@@ -1,4 +1,4 @@
-label: Aide au BAFD
+label: Aide au BAFD du département de la Mayenne
 institution: departement_mayenne
 description: Le Département de la Mayenne prend en charge une partie du coût de
   la formation au brevet d’aptitude aux fonctions de directeur (BAFD), pour
