--- a/data/benefits/openfisca/nouvelle_aquitaine_carte_solidaire.yml
+++ b/data/benefits/openfisca/nouvelle_aquitaine_carte_solidaire.yml
@@ -1,13 +1,16 @@
 label: carte Solidaire pour les transports
 institution: region_nouvelle_aquitaine
-description: >
-  La Carte Solidaire permet de bénéficier de réductions importantes sur les trajets en trains TER et cars régionaux en Nouvelle-Aquitaine. Elle est destinée aux personnes qui ont de faibles revenus ou bénéficient de certaines prestations.
-link: https://transports.nouvelle-aquitaine.fr/toute-lactualite-des-transports/un-tarif-solidaire-pour-les-trajets-en-trains-ter-et-cars-regionaux
-instructions: https://cartesolidaire-nouvelle-aquitaine.cba.fr/
+description: La Carte Solidaire permet de bénéficier de 80% de réduction sur les
+  trajets en trains TER et cars régionaux en Nouvelle-Aquitaine. Elle est
+  destinée aux personnes qui ont de faibles revenus ou bénéficient de certaines
+  prestations.
 prefix: la
-type: float
-unit: "%"
-legend: de réduction
+type: bool
+unit: null
+periodicite: ponctuelle
+legend: ""
+link: https://transports.nouvelle-aquitaine.fr/les-offres/la-carte-solidaire
+teleservice: https://cartesolidaire-nouvelle-aquitaine.cba.fr/
+instructions: ""
 entity: individus
 openfiscaPeriod: thisMonth
-periodicite: ponctuelle
