chore: Ajouter les options path pour la config ts du serveur

--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -16,7 +16,12 @@
     "noImplicitThis": false,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "types": []
+    "types": [],
+    "paths": {
+      "@/*": ["src/*"],
+      "@lib/*": ["lib/*"],
+      "@data/*": ["data/*"]
+    }
   },
   "resolve": {
     "extensions": [".cjs", ".ts", ".js", ".json"]
